Fix for tdf#91065. Following comment 3

Having a place holder for substituting the file name instead of concatenating it in
Properties dialogue title 

Change-Id: I8b3bafbc95c857fa5957bfdafbded5dde94e0e64